log/build_2026-03-26_01-17-13/aruco_detector_node/stderr.log
  File "/home/drone/drone_ws/install/aruco_detector_node/lib/python3.10/site-packages/aruco_detector_node/aruco_detector.py", line 63
    </html>"""
              ^
SyntaxError: bytes can only contain ASCII literal characters

